styled icon frame in main dialog

--- a/styles/agsbs-atom-package.less
+++ b/styles/agsbs-atom-package.less
@@ -4,6 +4,26 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.agsbs-atom-package {
+.dialog_navigation {
+	button {
+		height: 25px;
+		width: 25px;
+		background-color: #282c34;
+		background-image: url('./icons/close.svg');
+		//C:/Users/buchh/Desktop/agsbs_atom_package/styles/icons/close.svg
+		background-repeat: no-repeat;
+    	background-position: center;
+		background-size: cover;
+		border: 0px;
+		border-radius: 3px;
+		float: right;
 
+		&:hover {
+			box-shadow: 0px 0px 4px 2px #9da5b4;
+		}
+
+		&:active {
+			box-shadow: 0px 0px 4px 1px #9da5b4;
+		}
+	}
 }
