addressed icon relative to the package path

--- a/styles/agsbs-atom-package.less
+++ b/styles/agsbs-atom-package.less
@@ -9,8 +9,7 @@
 		height: 25px;
 		width: 25px;
 		background-color: #282c34;
-		background-image: url('./icons/close.svg');
-		//C:/Users/buchh/Desktop/agsbs_atom_package/styles/icons/close.svg
+		background-image: url('atom://agsbs-atom-package/styles/icons/close.svg');
 		background-repeat: no-repeat;
     	background-position: center;
 		background-size: cover;
