--- a/styles/agsbs-atom-package.less
+++ b/styles/agsbs-atom-package.less
@@ -4,6 +4,15 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
+.dialog_window {
+	position: fixed !important;
+    top: 0px;
+	left: 0px;
+    background: rgba(0,0,0,0);
+    width: 100%;
+    height: 100%;
+}
+
 .dialog_navigation {
 	button {
 		height: 25px;
@@ -15,7 +24,6 @@
 		background-size: cover;
 		border: 0px;
 		border-radius: 3px;
-		float: right;
 
 		&:hover {
 			box-shadow: 0px 0px 4px 2px #9da5b4;
