--- a/styles/agsbs-atom-package.less
+++ b/styles/agsbs-atom-package.less
@@ -2,35 +2,6 @@
 //
 // See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
 // for a full listing of what's available.
-@import "ui-variables";
-
-.dialog_window {
-	position: fixed !important;
-    top: 0px;
-	left: 0px;
-    background: rgba(0,0,0,0);
-    width: 100%;
-    height: 100%;
-}
-
-.dialog_navigation {
-	button {
-		height: 25px;
-		width: 25px;
-		background-color: #282c34;
-		background-image: url('atom://agsbs-atom-package/styles/icons/close.svg');
-		background-repeat: no-repeat;
-    	background-position: center;
-		background-size: cover;
-		border: 0px;
-		border-radius: 3px;
-
-		&:hover {
-			box-shadow: 0px 0px 4px 2px #9da5b4;
-		}
-
-		&:active {
-			box-shadow: 0px 0px 4px 1px #9da5b4;
-		}
-	}
-}
+@import 'ui-variables';
+@import 'dialogs';
+@import 'variables_mixins';
