--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -1,1 +1,8 @@
 //importing font-faces
+
+@font-face {
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  font-style: normal;
+  src: url('atom://agsbs-atom-package/styles/fonts/fontawesome-webfont.woff2') format('woff2');
+}
