--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -8,9 +8,15 @@
 @border_radius: 3px;
 
 //mixins
-
 .centered {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.font_awesome_icon {
+	height: @button_size;
+	width: @button_size;
+	font-family: 'FontAwesome';
+	padding: 0px;
 }
