--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -19,4 +19,9 @@
 	width: @button_size;
 	font-family: 'FontAwesome';
 	padding: 0px;
+
+	&::before {
+		position: relative;
+    	top: -1px;
+	}
 }
