--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -40,9 +40,22 @@
 			display: flex;
 			justify-content: flex-end;
 
-			.close_button {
-				.font_awesome_icon;
+			.fontawsome_iconed_button {
+				height: @button_size;
+				width: @button_size;
+				font-family: 'FontAwesome';
+				padding: 0px;
+
+				&::before {
+					position: relative;
+					top: -1px;
+				}
 			}
+		}
+
+		.own_iconed_button {
+			height: @button_size;
+			width: @button_size;
 		}
 
 		.dialog_content {
