--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -1,5 +1,5 @@
 //styles for the dialogs
-@import 'imports';
+@import 'variables_mixins';
 
 //main dialog
 .dialog_window {
@@ -34,13 +34,16 @@
 
 				&::before {
 					position: relative;
-					top: -1px;
 				}
 			}
 		}
 
 		.own_iconed_button {
 			.iconed_button;
+		}
+
+		.close {
+			top: -1px;
 		}
 
 		.dialog_content {
