added: headline icons

--- a/styles/footer-panel.less
+++ b/styles/footer-panel.less
@@ -23,8 +23,7 @@
 		.iconed_button;
 	}
 
-	//adjust icon size
-	#blockqoute {
-		font-size: 16px;
+	#blockqoute::before {
+		font-size: 18px;
 	}
 }
