styled: directory button

--- a/styles/footer-panel.less
+++ b/styles/footer-panel.less
@@ -5,11 +5,11 @@
 	width: 100%;
 	display: flex;
 
-	button, input[type="submit"] {
+	button {
 		.buttons;
 	}
 
-	.fontawsome_iconed_button {
+	.fontawesome_iconed_button {
 		font-family: 'FontAwesome';
 		.iconed_button;
 
