--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -15,27 +15,45 @@
 	.dialog_container {
 		position: relative;
 		z-index: 1;
-		width: 70%;
+		width: 50%;
 		background-color: @background;
 		border-radius: @border_radius;
 		box-shadow: 0px 0px 30px 10px @glow;
 
-		button, input[type="submit"] {
+		button, input[type = 'submit'] {
 			.buttons
 		}
+
+		input[type = 'file'] {
+			display: none;
+		}
+
+		label[for = 'directory'] {
+			.buttons;
+			font-size: 18px;
+
+			&::before {
+				top: 4px;
+				left: 3px;
+			}
+
+			&:hover {
+				cursor: pointer;
+			}
+		}
+
+		.fontawesome_iconed_button {
+			font-family: 'FontAwesome';
+			.iconed_button;
+
+			&::before {
+				position: relative;
+				top: -1px;
+			}
 
 		.dialog_navigation {
 			display: flex;
 			justify-content: flex-end;
-
-			.fontawsome_iconed_button {
-				font-family: 'FontAwesome';
-				.iconed_button;
-
-				&::before {
-					position: relative;
-					top: -1px;
-				}
 			}
 		}
 
