--- a/styles/main-navigation.less
+++ b/styles/main-navigation.less
@@ -4,11 +4,11 @@
 	width: 100%;
 	display: flex;
 
-	button, input[type="submit"] {
+	button {
 		.buttons;
 	}
 
-	.fontawsome_iconed_button {
+	.fontawesome_iconed_button {
 		font-family: 'FontAwesome';
 		.iconed_button;
 
