--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -7,7 +7,7 @@
 	.centered;
     top: 0px;
 	left: 0px;
-    background: rgba(0,0,0,0);
+    background: rgba(11, 12, 14, 0.5);
     width: 100%;
     height: 100%;
 	z-index: 0;
