added: Textfield to type/file-inputs to show choosen folder/file

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -65,6 +65,15 @@
 			margin-left: @main_margin;
 			margin-right: @main_margin;
 			margin-bottom: @main_margin;
+
+			.file_input {
+				display: flex;
+
+				output {
+					padding-top: 0px;
+					margin: @main_margin 0px;
+				}
+			}
 		}
 	}
 }
