styled: main menu icons

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -18,7 +18,7 @@
 		width: 50%;
 		background-color: @background;
 		border-radius: @border_radius;
-		box-shadow: 0px 0px 30px 10px @glow;
+		box-shadow: 0px 0px 30px 10px @grey;
 
 		button, input[type = 'submit'] {
 			.buttons
