--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -1,7 +1,7 @@
 //colors
-@background: #21252b; //#282c34;
-
-@glow: #9da5b4;
+@background: #21252b;
+@grey: #9da5b4;
+@dark_grey: #3e4248;
 
 //sizes, margins, paddings and border_radius
 @button_size: 25px;
@@ -24,11 +24,11 @@
 	border-radius: @border_radius;
 
 	&:hover {
-		box-shadow: 0px 0px 4px 2px @glow;
+		box-shadow: 0px 0px 4px 2px @grey;
 	}
 
 	&:active {
-		box-shadow: 0px 0px 4px 1px @glow;
+		box-shadow: 0px 0px 4px 1px @grey;
 	}
 }
 
