--- a/styles/footer-panel.less
+++ b/styles/footer-panel.less
@@ -4,6 +4,8 @@
 .footer_panel_container {
 	width: 100%;
 	display: flex;
+	border-bottom: 1px solid @border;
+	border-left: 1px solid @border;
 
 	button {
 		.buttons;
