--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -16,9 +16,9 @@
 		position: relative;
 		z-index: 1;
 		width: 50%;
-		background-color: @background;
+		background-color: @dark_background;
 		border-radius: @border_radius;
-		box-shadow: 0px 0px 30px 10px @grey;
+		box-shadow: 0px 0px 30px 10px @primary;
 
 		button, input[type = 'submit'] {
 			.buttons
