--- a/styles/main-navigation.less
+++ b/styles/main-navigation.less
@@ -3,7 +3,8 @@
 .main_navigation_container {
 	width: 100%;
 	display: flex;
-	border-bottom: 1px solid @dark_grey;
+	border-bottom: 1px solid @border;
+	border-left: 1px solid @border;
 
 	button {
 		.buttons;
