--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -1,7 +1,8 @@
 //colors
-@background: #21252b;
-@grey: #9da5b4;
-@dark_grey: #3e4248;
+@dark_background: #21252b;
+@light_background: #282c34;
+@primary: #9da5b4;
+@border: #17191e;
 
 //sizes, margins, paddings and border_radius
 @button_size: 25px;
@@ -18,17 +19,17 @@
 //must be set in every panel
 .buttons {
 	height: @button_size;
-	background-color: @background;
+	background-color: @dark_background;
 	margin: @main_margin;
 	border: 0px;
 	border-radius: @border_radius;
 
 	&:hover {
-		box-shadow: 0px 0px 4px 2px @grey;
+		box-shadow: 0px 0px 4px 2px @primary;
 	}
 
 	&:active {
-		box-shadow: 0px 0px 4px 1px @grey;
+		box-shadow: 0px 0px 4px 1px @primary;
 	}
 }
 
