--- a/styles/main-navigation.less
+++ b/styles/main-navigation.less
@@ -2,12 +2,25 @@
 
 .main_navigation_container {
 	width: 100%;
+	//height: 42px; //button 25px + 2*margin 8px + border 1px;
 	display: flex;
 	border-bottom: 1px solid @border;
 	border-left: 1px solid @border;
 
 	button {
 		.buttons;
+
+		//for language switch
+		&.active {
+			&:hover {
+				box-shadow: none;
+				cursor: default;
+			}
+
+			&:active {
+				box-shadow: none;
+			}
+		}
 	}
 
 	.fontawesome_iconed_button {
