--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -15,35 +15,13 @@
 	.dialog_container {
 		position: relative;
 		z-index: 1;
-		width: 50%;
+		width: 500px;
 		background-color: @dark_background;
 		border-radius: @border_radius;
 		box-shadow: 0px 0px 30px 10px @primary;
 
-		button, input[type = 'submit'] {
+		button {
 			.buttons
-		}
-
-		input[type = 'file'] {
-			display: none;
-		}
-
-		label[for = 'directory'] {
-			.buttons;
-			font-size: 18px;
-
-			&::before {
-				top: 4px;
-				left: 3px;
-			}
-
-			&:hover {
-				cursor: pointer;
-			}
-		}
-
-		.own_iconed_button {
-			.iconed_button;
 		}
 
 		.fontawesome_iconed_button {
@@ -62,17 +40,52 @@
 		}
 
 		.dialog_content {
+			font-size: 14px;
 			margin-left: @main_margin;
 			margin-right: @main_margin;
 			margin-bottom: @main_margin;
+
+			button {
+				.buttons;
+			}
+
+			input, select {
+				margin: @main_margin;
+				background: @light_background;
+				border: none;
+				border-radius: @border_radius;
+			}
+
+			input[type = 'file'] {
+				display: none;
+			}
+
+			label[for = 'directory'] {
+				.buttons;
+				font-size: 18px;
+
+				&::before {
+					top: 4px;
+					left: 3px;
+				}
+
+				&:hover {
+					cursor: pointer;
+				}
+			}
 
 			.file_input {
 				display: flex;
 
 				output {
-					padding-top: 0px;
+					.centered;
+					padding: 0px;
 					margin: @main_margin 0px;
 				}
+			}
+
+			input[type = 'submit'] {
+				.buttons;
 			}
 		}
 	}
