--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -50,10 +50,40 @@
 			}
 
 			input, select {
+				-webkit-appearance: none;
 				margin: @main_margin;
 				background: @light_background;
 				border: none;
 				border-radius: @border_radius;
+
+				&:focus {
+					box-shadow: 0px 0px 4px 2px @primary;
+				}
+			}
+
+			input[type = 'checkbox'] {
+				height: 15px;
+				width: 15px;
+				outline: none;
+				box-sizing: border-box;
+				border: 2px solid @primary;
+
+				&:hover {
+					background-image: url(atom://agsbs-atom-package/styles/icons/check_hover.svg);
+				}
+
+				&:checked {
+					background-image: url(atom://agsbs-atom-package/styles/icons/check_checked.svg);
+				}
+			}
+
+			input[type = 'text'], input[type = 'number'], input[type = 'password'], select {
+				height: @button_size;
+				padding: 0px 15px;
+			}
+
+			::-webkit-input-placeholder {
+				color: #555555;
 			}
 
 			input[type = 'file'] {
