styled: checkbox label

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -74,6 +74,15 @@
 				&:checked {
 					background-image: url(atom://agsbs-atom-package/styles/icons/check_checked.svg);
 				}
+
+				& + label {
+					.centered;
+					margin:0px;
+				}
+			}
+
+			.checkbox_container {
+				display: flex;
 			}
 
 			select {
