styled: number and drop-down labels

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -129,6 +129,12 @@
 				color: #555555;
 			}
 
+			.input_wrapper label {
+				display: block;
+				margin-bottom: 0px;
+				margin-left: @main_margin;
+			}
+
 			input[type = 'file'] {
 				display: none;
 			}
