--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -129,7 +129,7 @@
 				color: #555555;
 			}
 
-			.input_wrapper label {
+			.input_container label {
 				display: block;
 				margin-bottom: 0px;
 				margin-left: @main_margin;
