--- a/styles/new-project-dialog.less
+++ b/styles/new-project-dialog.less
@@ -33,7 +33,7 @@
 		width: calc(~"100% - "@main_margin*2);
 	}
 
-	#appendixChapters {
+	#appendix_chapters {
 		width: calc(~"100% - "@main_margin*2);
 	}
 
@@ -46,7 +46,7 @@
 
 	.checkbox_container {
 		display: inline-block;
-		width: 77%;
+		width: 67%;
 	}
 
 	.input_container {
