--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -2,6 +2,7 @@
 @dark_background: #21252b;
 @light_background: #282c34;
 @primary: #9da5b4;
+@greyed: #555555;
 @border: #17191e;
 
 //sizes, margins, paddings and border_radius
