--- a/styles/new-project-dialog.less
+++ b/styles/new-project-dialog.less
@@ -24,7 +24,7 @@
 
 	.input_container {
 		display: inline-block;
-		width: 33%;
+		width: 33.333333%;
 	}
 
 	#chapters {
@@ -48,7 +48,7 @@
 		position: relative;
 		top: -15px;
 		display: inline-flex !important;
-		width: 66%;
+		width: 66.777777%;
 	}
 
 	.input_container {
@@ -59,5 +59,22 @@
 
 	#depth_of_table_of_contents {
 		width: calc(~"100% - "@main_margin*2);
+	}
+}
+
+.document_metadata_container {
+	height: 0px;
+	.transition;
+
+	#title {
+		width: calc(~"100% - "@main_margin*2);
+	}
+
+	#author{
+		width: calc(~"50% - "@main_margin*2);
+	}
+
+	#institution {
+		width: calc(~"50% - "@main_margin*2);
 	}
 }
