added: some dummy features

--- a/styles/footer-panel.less
+++ b/styles/footer-panel.less
@@ -4,6 +4,7 @@
 .footer_panel_container {
 	width: 100%;
 	display: flex;
+	flex-wrap: wrap;
 	border-bottom: 1px solid @border;
 	border-left: 1px solid @border;
 
