alcoholized programmed: table view

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -17,7 +17,7 @@
 	.dialog_container {
 		position: relative;
 		z-index: 1;
-		width: 500px;
+		width: @dialog_width;
 		background-color: @dark_background;
 		border-radius: @border_radius;
 		box-shadow: 0px 0px 30px 10px @primary;
