--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -6,6 +6,8 @@
 @border: #17191e;
 
 //sizes, margins, paddings and border_radius
+@dialog_width: 500px;
+@dialog_content_width: 500px - 2*@main_margin;
 @button_size: 25px;
 @main_margin: 8px;
 @border_radius: 3px;
