--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -17,10 +17,12 @@
 	.dialog_container {
 		position: relative;
 		z-index: 1;
+		min-width: @dialog_width;
 		width: @dialog_width;
 		background-color: @dark_background;
 		border-radius: @border_radius;
 		box-shadow: 0px 0px 30px 10px @primary;
+		.transition;
 
 		button {
 			.buttons
