--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -42,7 +42,8 @@
 }
 
 .transition {
-	transition: all 1s;
+	transition-property: all;
+    transition-duration: 1s;
 	transition-timing-function: ease;
 	overflow: hidden;
 }
