filled: table head with columbs

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -127,7 +127,8 @@
 
 			input[type = 'text'], input[type = 'number'], input[type = 'password'], select {
 				height: @button_size;
-				padding: 0px 15px;
+				padding-left: 15px;
+				padding-right: 15px;
 			}
 
 			::-webkit-input-placeholder {
