stlyed: language menu, added: 3 rows ;)

--- a/styles/main-navigation.less
+++ b/styles/main-navigation.less
@@ -2,10 +2,18 @@
 
 .main_navigation_container {
 	width: 100%;
-	//height: 42px; //button 25px + 2*margin 8px + border 1px;
 	display: flex;
+	justify-content: space-between;
 	border-bottom: 1px solid @border;
 	border-left: 1px solid @border;
+
+	.tools {
+		display: flex;
+	}
+
+	.languages {
+		display: flex;
+	}
 
 	button {
 		.buttons;
