--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -144,7 +144,7 @@
 				display: none;
 			}
 
-			label[for = 'directory'] {
+			label[name = 'filepicker'] {
 				.buttons;
 				font-size: 18px;
 
