--- a/styles/insert-table-dialog.less
+++ b/styles/insert-table-dialog.less
@@ -19,6 +19,8 @@
 
 .table_container {
 	margin: @main_margin 0px;
+	max-height: 100%;
+	overflow: overlay;
 
 	.head_container {
 		border-bottom: 1px solid @light_background;
