--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -101,9 +101,10 @@
 			input::-webkit-inner-spin-button {
 				-webkit-appearance: none;
 				position: relative;
-				left: 13px;
+				//left: 13px;
 				width: 20px;
 				cursor: pointer;
+				background: red;
 
 				&::before, &::after {
 					content: '';
