fixed: numberpicker arrow keys by deleting it

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -100,29 +100,29 @@
 
 			input::-webkit-inner-spin-button {
 				-webkit-appearance: none;
-				position: relative;
-				//left: 13px;
-				width: 20px;
-				cursor: pointer;
-				background: red;
-
-				&::before, &::after {
-					content: '';
-					position: absolute;
-					height: 12px;
-					width: 25px;
-					background-repeat: no-repeat;
-				}
-
-				&::before {
-					background-image: url(atom://agsbs-atom-package/styles/icons/arrow_up_number_hover.svg);
-					top: 2px;
-				}
-
-					&::after {
-						background-image: url(atom://agsbs-atom-package/styles/icons/arrow_down_number_hover.svg);
-						top: 11px;
-					}
+//				position: relative;
+//				//left: 13px;
+//				width: 20px;
+//				cursor: pointer;
+//				background: red;
+//
+//				&::before, &::after {
+//					content: '';
+//					position: absolute;
+//					height: 12px;
+//					width: 25px;
+//					background-repeat: no-repeat;
+//				}
+//
+//				&::before {
+//					background-image: url(atom://agsbs-atom-package/styles/icons/arrow_up_number_hover.svg);
+//					top: 2px;
+//				}
+//
+//					&::after {
+//						background-image: url(atom://agsbs-atom-package/styles/icons/arrow_down_number_hover.svg);
+//						top: 11px;
+//					}
 				}
 
 			input[type = 'text'], input[type = 'number'], input[type = 'password'], select {
