--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -125,7 +125,7 @@
 //					}
 				}
 
-			input[type = 'text'], input[type = 'number'], input[type = 'password'], select {
+			input[type = 'text'], input[type = 'number'], input[type = 'password'], select, textarea {
 				height: @button_size;
 				padding-left: 15px;
 				padding-right: 15px;
