--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -120,7 +120,7 @@
 					}
 				}
 
-				.arrow_up {
+				.arrow_down {
 					background-image: url(atom://agsbs-atom-package/styles/icons/arrow_down_number_hover.svg);
 					bottom: 8px;
 
