added: headlines to dialogs

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -38,7 +38,15 @@
 
 		.dialog_navigation {
 			display: flex;
-			justify-content: flex-end;
+			justify-content: space-between;
+
+			.dialog_headline {
+				display: flex;
+				align-items: center;
+				margin-left: 2*@main_margin;
+				font-size: 18px;
+    			font-weight: bold;
+			}
 		}
 
 		.dialog_content {
