sodomized: Separators in navigation panels

--- a/styles/main-navigation.less
+++ b/styles/main-navigation.less
@@ -7,6 +7,19 @@
 	border-bottom: 1px solid @border;
 	border-left: 1px solid @border;
 
+	fieldset {
+		.fieldset;
+	display: flex;
+
+		.flex_container {
+			display: flex;
+		}
+	}
+
+	legend {
+		.legend;
+	}
+
 	.tools {
 		display: flex;
 	}
