--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -47,3 +47,22 @@
 	transition-timing-function: ease;
 	overflow: hidden;
 }
+
+.fieldset {
+	border-top: 1px solid  @primary;
+	margin-top: 0.25*@main_margin;
+	margin-right: 0.5*@main_margin;
+
+	button {
+		margin: 0px @main_margin 0.25*@main_margin @main_margin;
+	}
+}
+
+.legend {
+	width: auto;
+	margin: 0 auto;
+	margin-bottom: 0.25*@main_margin;
+	color: @primary;
+	font-size: 11px;
+	border: 0;
+}
