--- a/styles/footer-panel.less
+++ b/styles/footer-panel.less
@@ -8,6 +8,19 @@
 	border-bottom: 1px solid @border;
 	border-left: 1px solid @border;
 
+	fieldset {
+		.fieldset;
+	display: flex;
+
+		.flex_container {
+			display: flex;
+		}
+	}
+
+	legend {
+		.legend;
+	}
+
 	button {
 		.buttons;
 	}
