confused: no idea what i have done, but it works

--- a/styles/new-project-dialog.less
+++ b/styles/new-project-dialog.less
@@ -77,4 +77,8 @@
 	#institution {
 		width: calc(~"50% - "@main_margin*2);
 	}
+
+	#material_source {
+		width: calc(~"100% - "@main_margin*2);
+	}
 }
