styled: headline container

--- a/styles/footer-panel.less
+++ b/styles/footer-panel.less
@@ -39,4 +39,18 @@
 	.own_iconed_button {
 		.iconed_button;
 	}
+
+	#headlines {
+		position: relative;
+		top: 11px;
+	}
+
+	#Headline {
+		width: 0px;
+		.transition;
+
+		legend {
+			width: 0px;
+		}
+	}
 }
