--- a/styles/variables_mixins.less
+++ b/styles/variables_mixins.less
@@ -23,6 +23,7 @@
 .buttons {
 	height: @button_size;
 	background-color: @dark_background;
+	background-repeat: no-repeat;
 	margin: @main_margin;
 	border: 0px;
 	border-radius: @border_radius;
@@ -51,7 +52,8 @@
 .fieldset {
 	border-top: 1px solid  @primary;
 	margin-top: 0.25*@main_margin;
-	margin-right: 0.5*@main_margin;
+	margin-right: 0.25*@main_margin;
+	margin-left: 0.25*@main_margin;
 
 	button {
 		margin: 0px @main_margin 0.25*@main_margin @main_margin;
