inserted: labels to text inputs

--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -159,6 +159,10 @@
 				margin-left: @main_margin;
 			}
 
+			.text_input_container {
+				position: relative;
+			}
+
 			textarea {
 				resize: none;
 				height: @button_size;
