--- a/styles/insert-graphic-dialog.less
+++ b/styles/insert-graphic-dialog.less
@@ -4,7 +4,10 @@
 	width: @dialog_width - @main_margin*2;
 
 	#alt_text {
-		width: calc(~"100% - "@main_margin*2);
+		width: 100%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	p {
@@ -13,10 +16,16 @@
 	}
 
 	#uri {
-		width: calc(~"100% - "@main_margin*2);
+		width: 100%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#graphic_title {
-		width: calc(~"100% - "@main_margin*2);
+		width: 100%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 }
