--- a/styles/new-project-dialog.less
+++ b/styles/new-project-dialog.less
@@ -6,15 +6,24 @@
 	.transition;
 
 	#source {
-		width: calc(~"100% - "@main_margin*2);
+		width: 100%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#git_user{
-		width: calc(~"50% - "@main_margin*2);
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#git_password {
-		width: calc(~"50% - "@main_margin*2);
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 }
 
@@ -67,18 +76,30 @@
 	.transition;
 
 	#title {
-		width: calc(~"100% - "@main_margin*2);
+		width: 100%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#author{
-		width: calc(~"50% - "@main_margin*2);
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#institution {
-		width: calc(~"50% - "@main_margin*2);
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#material_source {
-		width: calc(~"100% - "@main_margin*2);
+		width: 100%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 }
