--- a/styles/save-dialog.less
+++ b/styles/save-dialog.less
@@ -5,7 +5,10 @@
 	.transition;
 }
 #save_dialog_commit_message {
-	width: calc(~"100% - "@main_margin*2);
+	width: 100%;
+	input {
+		width: calc(~"100% - "@main_margin*2);
+	}
 }
 
 .save_buttons {
