--- a/styles/footnote-dialog.less
+++ b/styles/footnote-dialog.less
@@ -4,10 +4,16 @@
 	width: @dialog_width - @main_margin*2;
 
 	#footnote_label {
-		width: calc(~"50% - "@main_margin*2);
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#footnote_text {
-		width: calc(~"50% - "@main_margin*2);
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 }
