--- a/styles/insert-link.less
+++ b/styles/insert-link.less
@@ -4,14 +4,23 @@
 	width: @dialog_width - @main_margin*2;
 
 	#link {
-		width: calc(~"100% - "@main_margin*2);
+		width: 100%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#link_text {
-		width: calc(~"50% - "@main_margin*2);
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 
 	#link_title {
-		width: calc(~"50% - "@main_margin*2);
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 }
