--- a/styles/new-project-dialog.less
+++ b/styles/new-project-dialog.less
@@ -97,7 +97,14 @@
 	}
 
 	#material_source {
-		width: 100%;
+		width: 50%;
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
+	}
+
+	#source_author {
+		width: 50%;
 		input {
 			width: calc(~"100% - "@main_margin*2);
 		}
