styled: inser tabel dialog

--- a/styles/insert-table-dialog.less
+++ b/styles/insert-table-dialog.less
@@ -13,6 +13,10 @@
 	width: @dialog_content_width/3;
 }
 
+#table_type_select {
+	width: calc(~"100% - "@main_margin*2);
+}
+
 #row_picker {
 	width: calc(~"100% - "@main_margin*2);
 }
