styled: insert graphics picture drop

--- a/styles/insert-graphic-dialog.less
+++ b/styles/insert-graphic-dialog.less
@@ -4,10 +4,7 @@
 	width: @dialog_width - @main_margin*2;
 
 	#alt_text {
-		width: 100%;
-		input {
-			width: calc(~"100% - "@main_margin*2);
-		}
+		width: calc(~"100% - "@main_margin*2);
 	}
 
 	p {
@@ -27,5 +24,9 @@
 		input {
 			width: calc(~"100% - "@main_margin*2);
 		}
+	}
+
+	#pictures {
+		width: calc(~"100% - "@main_margin*2);
 	}
 }
