--- a/styles/dialogs.less
+++ b/styles/dialogs.less
@@ -14,6 +14,10 @@
     height: 100%;
 	z-index: 0;
 
+	::-webkit-input-placeholder {
+		font-weight: bold;
+	}
+
 	.dialog_container {
 		position: relative;
 		z-index: 1;
