--- a/styles/edit-project-dialog.less
+++ b/styles/edit-project-dialog.less
@@ -11,8 +11,15 @@
 	}
 }
 
-#edit_institution {
+#edit_source_author {
 	width: 50%;
+	input {
+		width: calc(~"100% - "@main_margin*2);
+	}
+}
+
+#edit_institution {
+	width: 100%;
 	input {
 		width: calc(~"100% - "@main_margin*2);
 	}
