styled: table import csv

--- a/styles/insert-table-dialog.less
+++ b/styles/insert-table-dialog.less
@@ -41,3 +41,15 @@
 		.transition;
 	}
 }
+
+#uri {
+	width: 50%;
+
+	input {
+		width: calc(~"100% - "@main_margin*2);
+	}
+}
+
+#tables {
+	width: calc(~"100% - "@main_margin*2);
+}
