--- a/styles/commit-changes-dialog.less
+++ b/styles/commit-changes-dialog.less
@@ -4,6 +4,10 @@
 	width: @dialog_width - @main_margin*2;
 
 	#commit_message {
-		width: calc(~"100% - "@main_margin*2);
+		width: 100%;
+		
+		input {
+			width: calc(~"100% - "@main_margin*2);
+		}
 	}
 }
